[package]
name = "nekoos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
x86_64 = "0.14.2"
volatile = "0.2.6"
spin = "0.9.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
integration-test = []

