[package]
name = "neko_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uart_16550 = "0.2.0"
x86_64 = "0.14.2"
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.9.4"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 
test-timeout = 300    

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "stack_overflow"
harness = false